Changes from jTDS 1.3.1
=======================

11/13/2014 - Holger Rehn
 o Applied patch #129 provided by lkoniecki (improved by Bain) to fix bug #725.

05/30/2014 - Holger Rehn
 o Fixed bug #726, using setMaxRows() may affect batch operations performed on
   another Statement object using the same (physical) connection.

10/29/2013 - Holger Rehn
 o Fixed savepoint functionality for Sybase ASE that has been broken by the fix
   for bug #569.

10/28/2013 - Holger Rehn
 o Fixed a bug that could cause an empty value being returned as a single
   whitespace when using Sybase ASE.

10/15/2013 - Holger Rehn
 o Implemented support for the COMPUTE (BY) operator (bug #678) for Sybase ASE.

09/06/2013 - Holger Rehn
 o Removed synchronization from method getAutoCommit().

09/03/2013 - Holger Rehn
 o Fixed bug #715, infinite loop when parsing an SQL command.
 o Fixed bug #710, invalid property handling in JtdsObjectFactory.

===============================================================================
06/08/2013 - jTDS 1.3.1 released
===============================================================================

Changes from jTDS 1.3.0
=======================

06/02/2013 - Holger Rehn
 o Fixed bug #702, JtdsConnection.getMutex() isn't thread-safe.
 o jTDS throws an SQLTimeoutException if an operation times out (bug #701).

05/16/2013 - Holger Rehn
 o Added range check to class BlobBuffer as proposed by Benedict Elliott Smith.
 o Applied patch for explicitly creating an in-memory BlobBuffer provided by
   Benedict Elliott Smith.

05/03/2013 - Holger Rehn
 o Fixed a bug that could cause the statement cache to be disabled. 
 o Improved statement cache performance.
 o Removed unnecessary synchronization overhead from SQL statement parser.

05/01/2013 - Holger Rehn
 o Fixed bug #687, JtdsObjectFactory don't accept the connection property name
   mappings used in jTDS versions up to jTDS 1.2.6.

04/02/2013 - Holger Rehn